--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./src/style.css">
     <title>YPOF</title>
   </head>
-  <body class="bg-ypof-background">
+  <body className="bg-ypof-background">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
